# OpenDrop

./: AirDropLike.App.csproj  AirDropLike.App.slnx  AirDropLike.sln  App.xaml  App.xaml.cs  Imports.cs  LICENSE  OpenDrop.App.csproj  OpenDrop.sln  Package.appxmanifest  README.md  app.manifest
AirDropLike.Core/Crypto/: IAead.cs  IKex.cs  IKeyDerivation.cs  KexKeyPair.cs
AirDropLike.Core/Devices/: DeviceDescriptor.cs
AirDropLike.Core/Discovery/: IDeviceDiscovery.cs
AirDropLike.Core/Security/: PathSafety.cs
AirDropLike.Core/Transfer/: CreateSessionResult.cs  ITransferClient.cs  TransferModels.cs  TransferResumeState.cs
AirDropLike.Infrastructure/: AirDropLike.Infrastructure.csproj
AirDropLike.Infrastructure/Crypto/: AesGcmAead.cs  EcdhP256Kex.cs  HkdfSha256.cs
AirDropLike.Infrastructure/Discovery/: DiscoveryOptions.cs  UdpDeviceDiscovery.cs
AirDropLike.Infrastructure/Transfer/: SecureFileSender.cs  TokenBucketLimiter.cs  TransferCrypto.cs  (+4 more)
AirDropLike.Tests/: AirDropLike.Tests.csproj  CryptoRoundTripTests.cs  PathSafetyTests.cs
OpenDrop.Infrastructure/: OpenDrop.Infrastructure.csproj
OpenDrop.Tests/: CryptoRoundTripTests.cs  OpenDrop.Tests.csproj  PathSafetyTests.cs
Properties/: launchSettings.json
ViewModels/: DeviceViewModel.cs  MainViewModel.cs
Views/: MainPage.xaml  MainPage.xaml.cs
pyqt6_opendrop/: README.md  pyproject.toml
pyqt6_opendrop/opendrop_pyqt6/: __init__.py  app.py  crypto.py  discovery.py  models.py  security.py  sender.py  transfer_client.py  transfer_server.py
pyqt6_opendrop/tests/: test_crypto.py  test_security.py
(+23 files in other folders)
