[project]
name = "opendrop-pyqt6"
version = "0.1.0"
description = "OpenDrop rewritten in Python with PyQt6"
requires-python = ">=3.11"
dependencies = [
  "PyQt6>=6.7",
  "Flask>=3.0",
  "requests>=2.32",
  "cryptography>=44.0"
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
opendrop-pyqt6 = "opendrop_pyqt6.app:main"

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.setuptools.packages.find]
where = ["."]
